--- a/style.css
+++ b/style.css
@@ -7,3 +7,13 @@
 body{
     background: #262a2f;
 }
+.container{
+    width: 400px;
+    padding: 25px 35px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    border-radius: 10px;
+}
