--- a/style.css
+++ b/style.css
@@ -17,3 +17,17 @@ body{
     background: #fff;
     border-radius: 10px;
 }
+.container p{
+    font-weight: 600;
+    font-size: 15px;
+    margin-bottom: 8px;
+}
+.container input{
+    width: 100%;
+    height: 50px;
+    border: 1px solid #494eea;
+    outline: 0;
+    padding: 10px;
+    margin: 10px 0 20px;
+    border-radius: 5px;
+}
