--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
 .container input{
     width: 100%;
     height: 50px;
-    border: 1px solid #494eea;
+    border: 1px solid #46b9e7;
     outline: 0;
     padding: 10px;
     margin: 10px 0 20px;
