--- a/style.css
+++ b/style.css
@@ -31,3 +31,16 @@ body{
     margin: 10px 0 20px;
     border-radius: 5px;
 }
+.container button{
+    width: 100%;
+    height: 50px;
+    background: #46b9e7;
+    color: #fff;
+    border: 0;
+    outline: 0;
+    border-radius: 5px;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    margin: 20px 0;
+    font-weight: 500;
+}
