--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body{
     border-radius: 5px;
     max-height: 0;
     overflow: hidden;
+    transition: max-height 1s;
 }
 .imgBox img{
     width: 100%;
