--- a/style.css
+++ b/style.css
@@ -60,3 +60,23 @@ body{
     margin: 10px auto;
     border: 1px solid #d1d1d1;
 }
+.error{
+    animation: shake 0.1s linear 10;
+}
+@keyframes shake{
+    0%{
+        transform: translatex(0);
+    }
+    25%{
+        transform: translatex(-2px);
+    }
+    50%{
+        transform: translatex(0);
+    }
+    75%{
+        transform: translatex(2px);
+    }
+    100%{
+        transform: translatex(0);
+    }
+}
