--- a/style.css
+++ b/style.css
@@ -44,18 +44,18 @@ body{
     margin: 20px 0;
     font-weight: 500;
 }
-.imgBox{
+#imgBox{
     width: 200px;
     border-radius: 5px;
     max-height: 0;
     overflow: hidden;
     transition: max-height 1s;
 }
-.imgBox img{
+#imgBox img{
     width: 100%;
     padding: 10px;
 }
-.imgBox.show-img{
+#imgBox.show-img{
     max-height: 300px;
     margin: 10px auto;
     border: 1px solid #d1d1d1;
